# tomodoro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SUMMARY.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: animation.rs  config.rs  history.rs  kitty.rs  main.rs  sixel.rs  timer.rs  ui.rs  video.rs
src/animation/: aurora.rs  blossom.rs  fire.rs  leaves.rs  mod.rs  rain.rs  stars.rs  sunset.rs  waves.rs
