[package]
name = "tomodoro"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "Terminal Pomodoro timer with animated backgrounds"
repository = "https://github.com/linuskelsey/tomodoro"
keywords = ["pomodoro", "timer", "tui", "terminal", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rodio = { version = "0.17", default-features = false, features = ["vorbis"] }
